--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
   <!-- Add Tailwind CSS -->
   <link href="styles.css" rel="stylesheet">
   <!-- Alpine.js Plugins -->
@@ -14,7 +13,7 @@
   <script defer src="https://unpkg.com/alpinejs@3.11.1/dist/cdn.min.js"></script>
   <!-- Google Fonts-->
   <style>
-    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,300&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,400&display=swap');
   </style>
   <style>
     [x-cloak] {
