--- a/index.html
+++ b/index.html
@@ -36,17 +36,22 @@
       </div>
       <div class="flex justify-between">
         <div class="mb-4">
-          <h3>
-            <a class="hover:text-slate-600 dark:hover:text-white" href="resume.html">Resume</a>
-          </h3>
-          <h3>
-            <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank”
-              href="https://github.com/shanedbutler">GitHub</a>
-          </h3>
-          <h3>
-            <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank”
-              href="https://www.linkedin.com/in/shanedbutler">LinkedIn</a>
-          </h3>
+          <a class="hover:text-slate-600 dark:hover:text-white" href="resume.html">
+            <h3>
+              Resume
+            </h3>
+          </a>
+          <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank” href="https://github.com/shanedbutler">
+            <h3>
+              GitHub
+            </h3>
+          </a>
+          <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank”
+            href="https://www.linkedin.com/in/shanedbutler">
+            <h3>
+              LinkedIn
+            </h3>
+          </a>
         </div>
         <img class="w-28 h-28 my-5 -mt-10 ml-20" src="assets/sbutler-400.webp">
     </section>
@@ -62,16 +67,27 @@
     </section>
     <section class="leading-relaxed">
       <h2 class="underline text-lg dark:text-white mb-1">Projects</h2>
-      <div x-data="{ activeAccordion: 2 }">
+      <div x-data="{ open: false }">
         <div>
-          <button x-on:click="activeAccordion = activeAccordion === 0 ? false : 0"
-            :class="{ 'button-active': activeAccordion === 0 }" class="button">
+          <button x-on:click="open = open === 0 ? false : 0" :class="{ 'button-active': open === 0 }" class="button">
             <h3 class="hover:text-slate-600 dark:hover:text-white">
               Pick Up Game Planner
+              <span x-show="open === false | open === 1">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                  stroke="currentColor" class="inline w-5 h-5">
+                  <path strokeLinecap="round" strokeLinejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                </svg>
+              </span>
+              <span x-cloak x-show="open === 0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                  stroke="currentColor" class="inline w-5 h-5">
+                  <path strokeLinecap="round" strokeLinejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                </svg>
+              </span>
             </h3>
           </button>
 
-          <div x-cloak x-show="activeAccordion === 0" x-collapse>
+          <div x-cloak x-show="open === 0" x-collapse>
             <p class="text-slate-900 dark:text-slate-300 content text-sm mt-1 mb-3">
               A web application to plan, organize, and manage community
               pick up game events. Users can register for games, view
@@ -80,20 +96,31 @@
               and includes functionality for admins to manage games and users.
               The app was designed for a community of soccer players in Los Angeles. See
               <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
-              href="https://www.loom.com/share/3d06a0a110cf495ea404cc1eabec8ea5">Loom demo</a>.
+                href="https://www.loom.com/share/3d06a0a110cf495ea404cc1eabec8ea5">Loom demo</a>.
             </p>
           </div>
         </div>
 
         <div>
-          <button x-on:click="activeAccordion = activeAccordion === 1 ? false : 1"
-            :class="{ 'button-active': activeAccordion === 1 }" class="button">
+          <button x-on:click="open = open === 1 ? false : 1" :class="{ 'button-active': open === 1 }" class="button">
             <h3 class="hover:text-slate-600 dark:hover:text-white">
               What's for Dinner Poker
+              <span x-show="open === false || open === 0">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                  stroke="currentColor" class="inline w-5 h-5">
+                  <path strokeLinecap="round" strokeLinejoin="round" d="M8.25 4.5l7.5 7.5-7.5 7.5" />
+                </svg>
+              </span>
+              <span x-cloak x-show="open === 1">
+                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1.5}
+                  stroke="currentColor" class="inline w-5 h-5">
+                  <path strokeLinecap="round" strokeLinejoin="round" d="M19.5 8.25l-7.5 7.5-7.5-7.5" />
+                </svg>
+              </span>
             </h3>
           </button>
 
-          <div x-cloak x-show="activeAccordion === 1" x-collapse>
+          <div x-cloak x-show="open === 1" x-collapse>
             <p class="text-slate-900 dark:text-slate-300 content text-sm mt-1 mb-3">
               A web game that is played to create a five-meal meal plan. Users
               select a pre-made deck based on seasonal meal themes or their
