Add project links to github

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 
 <body class="flex justify-center dark:bg-slate-800 dark:text-slate-300">
-  <main class="my-6  mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4">
+  <main class="my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4">
     <section>
       <h1 class="text-2xl mb-2 dark:text-white">
         <a href="index.html">Shane Butler</a>
@@ -94,9 +94,14 @@
               rosters, and be assigned positions based on their preferred
               positions. The app handles a wait-list, a notification system,
               and includes functionality for admins to manage games and users.
-              The app was designed for a community of soccer players in Los Angeles. See
+              The app was designed for a community of soccer players in Los Angeles.
+              Check out the
               <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
-                href="https://www.loom.com/share/3d06a0a110cf495ea404cc1eabec8ea5">Loom demo</a>.
+                href="https://www.loom.com/share/3d06a0a110cf495ea404cc1eabec8ea5">
+                demo</a> or the source code on
+              <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
+                href="https://github.com/shanedbutler/pug-planner">
+                GitHub</a>.
             </p>
           </div>
         </div>
@@ -127,9 +132,14 @@
               own user created deck. The two-round interactive game-play
               results in a final “hand” of five meal cards. The game seeks to
               help meal planning by reducing decision fatigue while remaining
-              interactive, and customizable through user-created decks. See
+              interactive, and customizable through user-created decks.
+              Check out the
               <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
-                href="https://www.loom.com/share/eb898482ea8e484dad6c450e59494dbe">Loom demo</a>.
+                href="https://www.loom.com/share/eb898482ea8e484dad6c450e59494dbe">
+                demo</a> or the source code on
+              <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
+                href="https://github.com/shanedbutler/whats-for-dinner-poker">
+                GitHub</a>.
             </p>
           </div>
         </div>
