--- a/resume.html
+++ b/resume.html
@@ -36,17 +36,22 @@
       </div>
       <div class="flex justify-between">
         <div class="mb-4">
-          <h3>
-            <a class="hover:text-slate-600 dark:hover:text-white" href="resume.html">Resume</a>
-          </h3>
-          <h3>
-            <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank”
-              href="https://github.com/shanedbutler">GitHub</a>
-          </h3>
-          <h3>
-            <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank”
-              href="https://www.linkedin.com/in/shanedbutler">LinkedIn</a>
-          </h3>
+          <a class="hover:text-slate-600 dark:hover:text-white" href="resume.html">
+            <h3>
+              Resume
+            </h3>
+          </a>
+          <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank” href="https://github.com/shanedbutler">
+            <h3>
+              GitHub
+            </h3>
+          </a>
+          <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank”
+            href="https://www.linkedin.com/in/shanedbutler">
+            <h3>
+              LinkedIn
+            </h3>
+          </a>
         </div>
         <img class="w-28 h-28 my-5 -mt-10 ml-20" src="assets/sbutler-400.webp">
     </section>
