Add arrows next to external links

--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
           </a>
           <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank” href="https://github.com/shanedbutler">
             <h3>
-              GitHub
+              GitHub >
             </h3>
           </a>
           <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank”
             href="https://www.linkedin.com/in/shanedbutler">
             <h3>
-              LinkedIn
+              LinkedIn >
             </h3>
           </a>
         </div>
