Optimize portrait image

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </h3>
           </a>
         </div>
-        <img class="w-28 h-28 my-5 -mt-10 ml-20" src="assets/sbutler-400.webp">
+        <img class="w-28 h-28 my-5 -mt-10 ml-20" src="assets/sbutler-224.png">
     </section>
     <section>
       <p class="text-slate-900 dark:text-slate-300 text-sm mb-4">
