--- a/resume.html
+++ b/resume.html
@@ -53,7 +53,7 @@
             </h3>
           </a>
         </div>
-        <img class="w-28 h-28 my-5 -mt-10 ml-20" src="assets/sbutler-400.webp">
+        <img class="w-28 h-28 my-5 -mt-10 ml-20" src="assets/sbutler-224.png">
     </section>
     <div x-data="{ activeAccordion: 0 }">
       <button x-on:click="activeAccordion = activeAccordion === 0 ? false : 0"
