--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   <title>Shane Butler - Full Stack Developer</title>
 </head>
 
-<body class="flex justify-center dark:bg-slate-800 dark:text-slate-300">
-  <main class="my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4">
+<body class="flex justify-center dark:bg-slate-800 dark:text-slate-300 bg-cover">
+  <main x-data="{ current: 0 }" class="my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4">
     <section>
       <h1 class="text-2xl mb-2 dark:text-white">
         <a href="index.html">Shane Butler</a>
@@ -36,8 +36,14 @@
       </div>
       <div class="flex justify-between">
         <div class="mb-4">
-          <a class="hover:text-slate-600 dark:hover:text-white" href="resume.html">
-            <h3>
+          <a x-on:click="current = 0" class="cursor-pointer hover:text-slate-600 dark:hover:text-white">
+            <h3 x-bind:class="current === 0 && 'underline'">
+
+              Projects
+            </h3>
+          </a>
+          <a x-on:click="current = 1" class="cursor-pointer hover:text-slate-600 dark:hover:text-white">
+            <h3 x-bind:class="current === 1 && 'underline'">
               Resume
             </h3>
           </a>
@@ -65,8 +71,12 @@
         enjoy cooking, birding, and snapping great photos. Let's get in touch!
       </p>
     </section>
-    <section class="leading-relaxed">
+    <section x-show="current === 0" class="leading-relaxed">
       <h2 class="underline text-lg dark:text-white mb-1">Projects</h2>
+      <p class="text-slate-900 dark:text-slate-300 text-sm mb-4">
+        Both of the projects below were designed and built as capstone projects to the
+        NewForce Coding School. Please check them out!
+      </p>
       <div x-data="{ open: false }">
         <div>
           <button x-on:click="open = open === 0 ? false : 0" :class="{ 'button-active': open === 0 }" class="button">
@@ -144,6 +154,118 @@
           </div>
         </div>
       </div>
+    </section>
+    <section x-cloak x-show="current === 1" class="leading-relaxed">
+      <div x-data="{ activeAccordion: 0 }">
+        <button x-on:click="activeAccordion = activeAccordion === 0 ? false : 0"
+          :class="{ 'button-active': activeAccordion === 0 }" class="button mb-1">
+          <h3 class="underline text-lg hover:text-slate-600 dark:text-white hover:dark:text-slate-300">Work Experience
+          </h3>
+        </button>
+        <div x-show="activeAccordion === 0" x-collapse class="space-y-4">
+          <div>
+            <h4 class="font-medium dark:text-slate-200">Junior Full Stack Developer</h4>
+            <div class="text-sm">
+              NewForce - Remote / Martinsburg, WV
+            </div>
+            <div class="italic text-sm mb-1">
+              June 2022 - January 2023
+            </div>
+            <ul class="text-slate-600 text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
+              <li>
+                Applied object-oriented programming fundamentals through team
+                based projects that reflect real world business problems.
+              </li>
+              <li>Collaborated remotely on projects using Slack and Zoom.</li>
+              <li>Managed source code version control with Git and GitHub.</li>
+              <li>
+                Applied JavaScript, HTML, and CSS fundamentals to build a
+                feature rich social media dashboard with CRUD functionality.
+              </li>
+              <li>
+                Leveraged native ES6 module bundling to build DRY, reusable
+                components.
+              </li>
+              <li>
+                Planned applications through white boarding dependencies,
+                building ERDs, and sketching-up wireframes with Figma and
+                FigJam.
+              </li>
+              <li>
+                Built and interacted with databases using SQL Server and
+                ADO.NET.
+              </li>
+              <li>Developed a blog management platform in ASP.NET with MVC.</li>
+            </ul>
+          </div>
+          <div class="pb-4">
+            <h4 class="font-medium dark:text-slate-200">Professional Photographer</h4>
+            <div class="text-sm">
+              Freelance - Richmond, VA / Durham, NC
+            </div>
+            <div class="italic text-sm mb-1">
+              May 2010 - June 2022
+            </div>
+            <div class="text-slate-600 dark:text-slate-400 text-sm mb-1">
+              Architectural photographer with additional experience in
+              portraiture, art museum photography, and commercial videography.
+              Remotely worked with Apartments.com and Google “Business View”.
+            </div>
+            <ul class="text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
+              <li>
+                Worked extensively with imaging and related software for client
+                review, editing, post-production, and export.
+              </li>
+              <li>
+                Deployed and manage workspace server for project tracking,
+                delivery, invoicing, licensing, and asset archival.
+              </li>
+              <li>
+                Designed and managed portfolio website using HTML and CSS.
+              </li>
+              <li>
+                Maintain regular clients through marketing, on-time delivery,
+                clear communication, and persistent attention to detail and
+                client needs.
+              </li>
+              <li>
+                Planned and led after-school class for children on basics of
+                photography.
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div x-data="{ activeAccordion: 0 }">
+          <button x-on:click="activeAccordion = activeAccordion === 0 ? false : 0"
+            :class="{ 'button-active': activeAccordion === 0 }" class="button mb-1">
+            <h3 class="underline text-lg hover:text-slate-600 dark:text-white hover:dark:text-slate-300">Education</h3>
+          </button>
+          <div x-show="activeAccordion === 0" x-collapse class="space-y-4">
+            <div class="space-y-4">
+              <div>
+                <h4 class="font-medium dark:text-slate-200">NewForce Coding School</h4>
+                <div class="italic text-sm">June 2022 - January 2023</div>
+                <ul class="text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
+                  <li>Full-time Software Development Training</li>
+                </ul>
+              </div>
+              <div>
+                <h4 class="font-medium dark:text-slate-200">Microsoft Azure Fundamentals</h4>
+                <div class="italic text-sm">December 2022</div>
+                <ul class="text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
+                  <li>AZ-900 Certification</li>
+                </ul>
+              </div>
+              <div>
+                <h4 class="font-medium dark:text-slate-200">Old Dominion University</h4>
+                <div class="italic text-sm">August 2005 - January 2010</div>
+                <ul class="text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
+                  <li>BFA - Photo and Print Media</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
     </section>
   </main>
 </body>
