--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     body {
       font-family: 'Poppins', sans-serif;
       padding-left: calc(100vw - 100%);
+      box-sizing: border-box;
     }
   </style>
   <title>Shane Butler - Full Stack Developer</title>
@@ -32,13 +33,13 @@
   <main x-data="{page: location.hash}" @hashchange.window="page = location.hash"
     class="my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4 2xl:w-5/12">
     <section>
-      <h1 class="text-2xl mb-2 dark:text-white">
-        <a href="">Shane Butler</a>
+      <h1 class="text-2xl mb-2 cursor-pointer dark:text-white">
+        <a x-on:click="location.hash = ''">Shane Butler</a>
       </h1>
       </div>
       <div class="flex justify-between">
-        <div class="mb-4 leading-relaxed mt-1 md:mt-0 md:leading-normal">
-          <a href="" class="hover:text-slate-600 dark:hover:text-white">
+        <div class="mb-4 cursor-pointer leading-relaxed mt-1 md:mt-0 md:leading-normal">
+          <a x-on:click="location.hash = ''" class="hover:text-slate-600 dark:hover:text-white">
             <h3 x-bind:class="page === '' && 'underline'">
               Projects
             </h3>
