--- a/index.html
+++ b/index.html
@@ -15,23 +15,12 @@
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;1,400&display=swap');
   </style>
-  <style>
-    [x-cloak] {
-      display: none !important;
-    }
-
-    body {
-      font-family: 'Poppins', sans-serif;
-      padding-left: calc(100vw - 100%);
-      box-sizing: border-box;
-    }
-  </style>
   <title>Shane Butler - Full Stack Developer</title>
 </head>
 
-<body class="flex justify-center dark:bg-slate-800 dark:text-slate-300 bg-cover">
+<body class="dark:bg-slate-800 dark:text-slate-300">
   <main x-data="{page: location.hash}" @hashchange.window="page = location.hash"
-    class="my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4 2xl:w-5/12">
+    class="h-full my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4 2xl:w-5/12">
     <section>
       <h1 class="text-2xl mb-2 cursor-pointer dark:text-white">
         <a x-on:click="location.hash = ''">Shane Butler</a>
