--- a/index.html
+++ b/index.html
@@ -22,11 +22,22 @@
   <main x-data="{page: location.hash}" @hashchange.window="page = location.hash"
     class="h-full my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4 2xl:w-5/12">
     <section>
-      <h1 class="text-2xl mb-2 cursor-pointer dark:text-white">
-        <a x-on:click="location.hash = ''">Shane Butler</a>
-      </h1>
-      </div>
       <div class="flex justify-between">
+        <h1 class="text-2xl mb-2 cursor-pointer dark:text-white">
+          <a x-on:click="location.hash = ''">Shane Butler</a>
+        </h1>
+        <div class="group flex-shrink-0 flex justify-center">
+          <img class="cursor-pointer w-28 h-28 dark:group-hover:opacity-50 bg-clip-content" src="assets/sbutler-224.png">
+          <div class="cursor-pointer absolute opacity-0 group-hover:opacity-100 self-center text-white">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor" class="w-8 h-8">
+              <path stroke-linecap="round" stroke-linejoin="round"
+                d="M12 3v2.25m6.364.386l-1.591 1.591M21 12h-2.25m-.386 6.364l-1.591-1.591M12 18.75V21m-4.773-4.227l-1.591 1.591M5.25 12H3m4.227-4.773L5.636 5.636M15.75 12a3.75 3.75 0 11-7.5 0 3.75 3.75 0 017.5 0z" />
+            </svg>
+          </div>
+        </div>
+      </div>
+      <div class="flex -mt-16 justify-between">
         <div class="mb-4 cursor-pointer leading-relaxed mt-1 md:mt-0 md:leading-normal">
           <a x-on:click="location.hash = ''" class="hover:text-slate-600 dark:hover:text-white">
             <h3 x-bind:class="page === '' && 'underline'">
@@ -60,7 +71,6 @@
             </h3>
           </a>
         </div>
-        <img class="w-28 h-28 my-5 -mt-10 ml-20" src="assets/sbutler-224.png">
     </section>
     <section>
       <p class="text-slate-900 dark:text-slate-300 text-sm mb-4">
