Update hover style classes for light mode

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a x-on:click="location.hash = ''">Shane Butler</a>
         </h1>
         <div class="group flex-shrink-0 flex justify-center">
-          <img class="cursor-pointer w-28 h-28 dark:group-hover:opacity-50 bg-clip-content" src="assets/sbutler-224.png">
+          <img class="cursor-pointer w-28 h-28 dark:group-hover:opacity-50 dark:group-hover:brightness-95 opacity-95 group-hover:opacity-100 group-hover:brightness-75 bg-clip-content" src="assets/sbutler-224.png">
           <div class="cursor-pointer absolute opacity-0 group-hover:opacity-100 self-center text-white">
             <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
               stroke="currentColor" class="w-8 h-8">
