Add meta tags to header

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="Shane Butler - Full-Stack Developer">
+  <meta name="description"
+    content="Shane Butler is a software engineer specializing in React, C# / .NET and SQL Server. Writing quality code to meet goals and reach creative solutions. Interested in civic and public health project sectors.">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6E7XDH8VPC"></script>
   <script>
