--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <div class="group flex-shrink-0 flex justify-center" x-on:click="toggleTheme; dark = false">
             <img
               class="cursor-pointer w-28 h-28 dark:group-hover:opacity-50 dark:group-hover:brightness-95 opacity-95 group-hover:opacity-100 group-hover:brightness-75 bg-clip-content"
-              src="assets/sbutler-224.png">
+              src="assets/sbutler-224.png" alt="Portrait of Shane with dark background">
             <div class="cursor-pointer absolute opacity-0 group-hover:opacity-100 self-center text-white">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-8 h-8">
@@ -77,7 +77,7 @@
           <div class="group flex-shrink-0 flex justify-center" x-on:click="toggleTheme; dark = true">
             <img
               class="cursor-pointer w-28 h-28 dark:group-hover:opacity-25 opacity-100 group-hover:opacity-100 group-hover:brightness-75 bg-clip-content"
-              src="assets/sbutler-224-light.png">
+              src="assets/sbutler-224-light.png" alt="Portrait of Shane with light background">
             <div class="cursor-pointer absolute opacity-0 group-hover:opacity-100 self-center text-white">
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="w-7 h-7">
@@ -91,35 +91,35 @@
       <div class="flex -mt-16 justify-between">
         <div class="mb-4 cursor-pointer leading-relaxed mt-1 md:mt-0 md:leading-normal">
           <a x-on:click="location.hash = ''" class="hover:text-slate-600 dark:hover:text-white">
-            <h3 x-bind:class="page === '' && 'underline'">
+            <h2 x-bind:class="page === '' && 'underline'">
               Projects
-            </h3>
+            </h2>
           </a>
           <a href="#resume" class="hover:text-slate-600 dark:hover:text-white">
-            <h3 x-bind:class="page === '#resume' && 'underline'">
+            <h2 x-bind:class="page === '#resume' && 'underline'">
               Resume
-            </h3>
+            </h2>
           </a>
           <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank” href="https://github.com/shanedbutler">
-            <h3 class="group">
+            <h2 class="group">
               GitHub
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="hidden group-hover:inline w-4 h-4 mb-1">
                 <path stroke-linecap="round" stroke-linejoin="round"
                   d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
               </svg>
-            </h3>
+            </h2>
           </a>
           <a class="hover:text-slate-600 dark:hover:text-white" target=”_blank”
             href="https://www.linkedin.com/in/shanedbutler">
-            <h3 class="group">
+            <h2 class="group">
               LinkedIn
               <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                 stroke="currentColor" class="hidden group-hover:inline w-4 h-4 mb-1">
                 <path stroke-linecap="round" stroke-linejoin="round"
                   d="M13.5 6H5.25A2.25 2.25 0 003 8.25v10.5A2.25 2.25 0 005.25 21h10.5A2.25 2.25 0 0018 18.75V10.5m-10.5 6L21 3m0 0h-5.25M21 3v5.25" />
               </svg>
-            </h3>
+            </h2>
           </a>
         </div>
     </section>
