--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     class="h-full my-6 mx-auto w-5/6 md:w-4/6 lg:w-7/12 xl:w-2/4 2xl:w-5/12">
     <section x-data="{ dark: JSON.parse(localStorage.getItem('isDark')) }">
       <div class="flex justify-between">
-        <h1 class="text-2xl mb-2 cursor-pointer dark:text-white">
+        <h1 class="text-2xl mb-1 cursor-pointer dark:text-white">
           <a x-on:click="location.hash = ''">Shane Butler</a>
         </h1>
         <!--Dark mode to light mode -->
@@ -89,7 +89,7 @@
         </div>
       </div>
       <div class="flex -mt-16 justify-between">
-        <div class="mb-4 cursor-pointer leading-relaxed mt-1 md:mt-0 md:leading-normal">
+        <div class="mb-4 cursor-pointer leading-loose md:leading-normal">
           <a x-on:click="location.hash = ''" class="hover:text-slate-600 dark:hover:text-white">
             <h2 x-bind:class="page === '' && 'underline'">
               Projects
@@ -134,7 +134,7 @@
       </p>
     </section>
     <div>
-      <section x-show="!page" class="leading-relaxed">
+      <section x-show="!page" class="leading-loose md:leading-relaxed">
         <h2 class="underline text-lg dark:text-white mb-1">Projects</h2>
         <p class="text-slate-900 dark:text-slate-300 text-sm mb-4">
           Both of the projects below were designed and built in 2022.
