--- a/index.html
+++ b/index.html
@@ -130,14 +130,14 @@
         control (Git), built front-end SPAs (Javascript / React), and wrote connecting
         back-end services (C# / .NET). I have a passion for web applications,
         learning, and utilizing my skills to reach creative solutions. I also
-        enjoy cooking, birding, and snapping great photos. Let's get in touch!
+        enjoy cooking, birding, and <a href="http://www.shanebutlerphoto.com">snapping great photos</a>. Let's get in touch!
       </p>
     </section>
     <div>
       <section x-show="!page" class="leading-loose md:leading-relaxed">
         <h2 class="underline text-lg dark:text-white mb-1">Projects</h2>
         <p class="text-slate-900 dark:text-slate-300 text-sm mb-4">
-          Both of the projects below were designed and built in 2022.
+          Both of the projects below were designed and built in 2022 and 2023.
           Please check them out!
         </p>
         <div x-data="{ open: false }">
@@ -318,7 +318,7 @@
                 </div>
                 <div>
                   <h4 class="font-medium dark:text-slate-200">Microsoft Azure Fundamentals</h4>
-                  <div class="italic text-sm">December 2022</div>
+                  <div class="italic text-sm">February 2023</div>
                   <ul class="text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
                     <li>AZ-900 Certification</li>
                   </ul>
