--- a/index.html
+++ b/index.html
@@ -230,6 +230,31 @@
           </button>
           <div x-show="activeAccordion === 0" x-collapse class="space-y-4">
             <div>
+              <h4 class="font-medium dark:text-slate-200">Junior Developer</h4>
+              <div class="text-sm">
+                Bayada Home Health - Remote / Martinsburg, WV
+              </div>
+              <div class="italic text-sm mb-1">
+                March 2023 - Current
+              </div>
+              <ul class="text-slate-600 text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
+                <li>
+                  Full-Stack software engineering role with Application Development
+                  team. Tasked with building and maintaining internal applications.
+                </li>
+                <li>Agile workflow using test driven development, Azure Dev-Ops, and TFS.</li>
+                <li>
+                  Worked on .NET ASP.NET MVC applications along with AngularJS front-end clients.
+                </li>
+                <li>
+                  Developed and maintained Android and iOS apps using Expo and React Native.
+                </li>
+                <li>
+                  Utilized Entity Framework to access, map, and manipulate data in SQL Server.
+                </li>
+              </ul>
+            </div>
+            <div class="pb-4">
               <h4 class="font-medium dark:text-slate-200">Junior Full Stack Developer</h4>
               <div class="text-sm">
                 NewForce - Remote / Martinsburg, WV
