Update formatting, adjust content

--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@
         control (Git), built front-end SPAs (Javascript / React), and wrote connecting
         back-end services (C# / .NET). I have a passion for web applications,
         learning, and utilizing my skills to reach creative solutions. I also
-        enjoy cooking, birding, and <a href="http://www.shanebutlerphoto.com">snapping great photos</a>. Let's get in touch!
+        enjoy cooking, birding, and <a href="http://www.shanebutlerphoto.com">snapping 
+        great photos</a>. Let's get in touch!
       </p>
     </section>
     <div>
@@ -250,11 +251,12 @@
                   Developed and maintained Android and iOS apps using Expo and React Native.
                 </li>
                 <li>
-                  Utilized Entity Framework to access, map, and manipulate data in SQL Server.
+                  Utilized Entity Framework ORM to access, map, and manipulate SQL Server 
+                  data using LINQ.
                 </li>
               </ul>
             </div>
-            <div class="pb-4">
+            <div>
               <h4 class="font-medium dark:text-slate-200">Junior Full Stack Developer</h4>
               <div class="text-sm">
                 NewForce - Remote / Martinsburg, WV
