--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <p class="text-slate-900 dark:text-slate-300 text-sm mb-4">
         Hi, my name is Shane (he/him). I am a software engineer who has shifted
         from a 12-year photography career. I've collaborated in teams using version
-        control (Git), built front-end SPAs (Javascript / React), and wrote connecting
+        control (Git), built front-end SPAs (Angular & React), and wrote connecting
         back-end services (C# / .NET). I have a passion for web applications,
         learning, and utilizing my skills to reach creative solutions. I also
         enjoy cooking, birding, and <a href="http://www.shanebutlerphoto.com">snapping 
@@ -238,21 +238,27 @@
               <div class="italic text-sm mb-1">
                 March 2023 - Current
               </div>
+              <div class="text-slate-600 dark:text-slate-400 text-sm mb-1">
+              Full-Stack software engineering role on Application Development
+              team. Tasked with building features and maintaining internal applications.
+              </div>
               <ul class="text-slate-600 text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
                 <li>
-                  Full-Stack software engineering role with Application Development
-                  team. Tasked with building and maintaining internal applications.
-                </li>
-                <li>Agile workflow using test driven development, Azure Dev-Ops, and TFS.</li>
-                <li>
-                  Worked on .NET ASP.NET MVC applications along with AngularJS front-end clients.
+                  Worked in Agile using test driven development, Azure Dev-Ops, and CI/CD pipelines
+                  to meet business requirements.
                 </li>
                 <li>
-                  Developed and maintained Android and iOS apps using Expo and React Native.
+                  Migrated .NET Framework applications to .NET Core and AngularJS front-ends to Angular.
+                </li>
+                <li>
+                  Developed and maintained mobile apps using Expo and React Native.
                 </li>
                 <li>
                   Utilized Entity Framework ORM to access, map, and manipulate SQL Server 
                   data using LINQ.
+                </li>
+                <li>
+                  Wrote and maintained unit tests using NUnit and Moq.
                 </li>
               </ul>
             </div>
@@ -264,11 +270,11 @@
               <div class="italic text-sm mb-1">
                 June 2022 - January 2023
               </div>
+              <div class="text-slate-600 dark:text-slate-400 text-sm mb-1">
+                Full-time program in simulated work environment working on
+                team projects that reflect real world business problems.
+                </div>
               <ul class="text-slate-600 text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
-                <li>
-                  Applied object-oriented programming fundamentals through team
-                  based projects that reflect real world business problems.
-                </li>
                 <li>Collaborated remotely on projects using Slack and Zoom.</li>
                 <li>Managed source code version control with Git and GitHub.</li>
                 <li>
