--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="title" content="Shane Butler - Full-Stack Developer">
   <meta name="description"
-    content="Shane Butler is a software engineer specializing in React, C# / .NET and SQL Server. Writing quality code to meet goals and reach creative solutions. Interested in civic and public health project sectors.">
+    content="Shane Butler is a software engineer specializing in React, C# / .NET and SQL Server. Writing quality code to meet goals and reach creative solutions. Interested in civic and public health sectors.">
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-6E7XDH8VPC"></script>
   <script>
@@ -125,12 +125,11 @@
     </section>
     <section>
       <p class="text-slate-900 dark:text-slate-300 text-sm mb-4">
-        Hi, my name is Shane (he/him). I am a software engineer who has shifted
-        from a 12-year photography career. I've collaborated in teams using version
-        control (Git), built front-end SPAs (Javascript / React), and wrote connecting
-        back-end services (C# / .NET). I have a passion for web applications,
-        learning, and utilizing my skills to reach creative solutions. I also
-        enjoy cooking, birding, and <a href="http://www.shanebutlerphoto.com">snapping great photos</a>. Let's get in touch!
+        Hi, my name is Shane (he/him). I am a software engineer with 2+ years of combined development experience. 
+        I've collaborated in teams using version control (Git), built front-end SPAs (Javascript / React), 
+        and wrote connecting back-end services (C# / .NET). I have a passion for web applications, 
+        learning, and utilizing my skills to reach creative solutions. I also enjoy cooking, birding, 
+        and <a href="http://www.shanebutlerphoto.com">snapping great photos</a>. Let's get in touch!
       </p>
     </section>
     <div>
@@ -163,8 +162,8 @@
 
             <div x-cloak x-show="open === 0" x-collapse>
               <p class="text-slate-900 dark:text-slate-300 content text-sm mt-1 mb-3">
-                A web application to plan, organize, and manage community
-                pick up game events. Users can register for games, view
+                A web app to plan, organize, and manage community
+                pick up games. Users can register for games, view
                 rosters, and be assigned positions based on their preferred
                 positions. The app handles a wait-list, a notification system,
                 and includes functionality for admins to manage games and users.
@@ -177,6 +176,8 @@
                   href="https://github.com/shanedbutler/pug-planner">
                   GitHub</a>.
               </p>
+              <img src="assets/pickup-planner-screenshot.webp" alt="Pickup Planner Screenshot"
+                class="my-5 rounded-sm shadow-lg">
             </div>
           </div>
 
@@ -217,7 +218,10 @@
                   href="https://github.com/shanedbutler/whats-for-dinner-poker">
                   GitHub</a>.
               </p>
+              <img src="assets/dinner-poker-screenshot.webp" alt="What's for Dinner Poker Screenshot"
+                class="my-5 rounded-sm shadow-lg">
             </div>
+
           </div>
         </div>
       </section>
