Add link to demo on project images

--- a/index.html
+++ b/index.html
@@ -179,8 +179,10 @@
                   href="https://github.com/shanedbutler/pug-planner">
                   GitHub</a>.
               </p>
-              <img src="assets/pickup-planner-screenshot.webp" alt="Pickup Planner Screenshot"
-                class="my-5 rounded-sm shadow-lg">
+              <a href="https://www.loom.com/share/3d06a0a110cf495ea404cc1eabec8ea5" target="_blank">
+                <img src="assets/pickup-planner-screenshot.webp" alt="Pickup Planner Screenshot"
+                  class="my-5 rounded-sm shadow-lg">
+              </a>
             </div>
           </div>
 
@@ -221,8 +223,10 @@
                   href="https://github.com/shanedbutler/whats-for-dinner-poker">
                   GitHub</a>.
               </p>
-              <img src="assets/dinner-poker-screenshot.webp" alt="What's for Dinner Poker Screenshot"
-                class="my-5 rounded-sm shadow-lg">
+              <a href="https://www.loom.com/share/eb898482ea8e484dad6c450e59494dbe" target="_blank">
+                <img src="assets/dinner-poker-screenshot.webp" alt="What's for Dinner Poker Screenshot"
+                  class="my-5 rounded-sm shadow-lg">
+              </a>
             </div>
 
           </div>
