--- a/index.html
+++ b/index.html
@@ -247,30 +247,29 @@
                 Bayada Home Health - Remote / Martinsburg, WV
               </div>
               <div class="italic text-sm mb-1">
-                March 2023 - Current
+                March 2023 - July 2023
               </div>
               <div class="text-slate-600 dark:text-slate-400 text-sm mb-1">
-              Full-Stack software engineering role on Application Development
-              team. Tasked with building features and maintaining internal applications.
+                Contract role on team tasked with adding features and maintaining internal apps.
               </div>
               <ul class="text-slate-600 text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
                 <li>
-                  Work in agile using test driven development, Azure Dev-Ops, and CI/CD pipelines
-                  to meet business requirements and stakeholder needs.
+                  Worked in agile using test driven development, Azure Dev-Ops, and CI/CD 
+                  pipelines to meet business requirements and stakeholder needs.
                 </li>
                 <li>
-                  Migrate production applications from .NET Framework to .NET 6 and rebuild 
-                  AngularJS front-ends in Angular 15 with TypeScript.
+                  Migrated production applications from .NET Framework to .NET 6 and AngularJS 
+                  to Angular 15 with TypeScript.
                 </li>
                 <li>
-                  Develop and maintain mobile apps using Expo and React Native.
+                  Developed and maintained mobile apps using Expo and React Native.
                 </li>
                 <li>
-                  Utilize Entity Framework ORM to access, map, and manipulate SQL Server 
+                  Utilized Entity Framework ORM to access, map, and manipulate SQL Server 
                   data using LINQ.
                 </li>
                 <li>
-                  Write and maintain unit tests using NUnit and Moq.
+                  Wrote and maintained unit tests using NUnit and Moq frameworks.
                 </li>
               </ul>
             </div>
