--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
     <!-- Profile -->
     <section>
       <p class="text-slate-900 dark:text-slate-300 text-sm mb-4">
-        Hi, my name is Shane (he/him). I am a software engineer with 2+ years of combined development experience. 
-        I've collaborated in teams using version control (Git), built front-end SPAs (React & Angular), 
-        and wrote connecting back-end services (C# / .NET). I have a passion for web applications, 
-        learning, and utilizing my skills to reach creative solutions. I also enjoy cooking, birding, 
+        Hi, my name is Shane (he/him). I am a software engineer with 3+ years of combined development experience.
+        I've collaborated in teams using version control (Git), built front-end clients (React & Angular),
+        and wrote connecting back-end services (C# / .NET). I'm passionate about leveraging current technology 
+        to create innovative solutions and deliver exceptional user experiences. I also enjoy cooking, birding,
         and <a href="http://www.shanebutlerphoto.com">snapping great photos</a>. Let's get in touch!
       </p>
     </section>
@@ -213,7 +213,7 @@
                 select a pre-made deck based on seasonal meal themes or their
                 own user created deck. The two-round interactive game-play
                 results in a final “hand” of five meal cards. The game seeks to
-                help meal planning by reducing decision fatigue while remaining
+                assist meal planning by reducing decision fatigue while remaining
                 interactive, and customizable through user-created decks.
                 Check out the
                 <a class="underline hover:text-slate-600 dark:text-white hover:dark:text-slate-300" target="_blank"
@@ -242,6 +242,38 @@
           </button>
           <div x-show="activeAccordion === 0" x-collapse class="space-y-4">
             <div>
+              <h4 class="font-medium dark:text-slate-200">Software Engineer</h4>
+              <div class="text-sm">
+                GDC IT Solutions - Remote / Martinsburg, WV
+              </div>
+              <div class="italic text-sm mb-1">
+                January 2024 - Present
+              </div>
+              <div class="text-slate-600 dark:text-slate-400 text-sm mb-1">
+                Mid-level role in application development department handling a wide variety of client requirements.
+              </div>
+              <ul class="text-slate-600 text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
+                <li>
+                  Lead development of features and UX design for K-12 school survey 
+                  metrics SaaS application using React, .NET 8, and Azure.
+                </li>
+                <li>
+                  Created Figma mockups to enhance user interface and experience.
+                </li>
+                <li>
+                  Developed proof-of-concept GPT-powered agent for customer service 
+                  chat features.
+                </li>
+                <li>
+                  Engineered CSV to Shopify import tool using Azure Functions and 
+                  Microsoft Power Apps.
+                </li>
+                <li>
+                  Developed and maintained HTML5 canvas based drawing tool.
+                </li>
+              </ul>
+            </div>
+            <div>
               <h4 class="font-medium dark:text-slate-200">Junior Developer</h4>
               <div class="text-sm">
                 Bayada Home Health - Remote / Martinsburg, WV
@@ -254,18 +286,18 @@
               </div>
               <ul class="text-slate-600 text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
                 <li>
-                  Worked in agile using test driven development, Azure Dev-Ops, and CI/CD 
+                  Worked in agile using test driven development, Azure Dev-Ops, and CI/CD
                   pipelines to meet business requirements and stakeholder needs.
                 </li>
                 <li>
-                  Migrated production applications from .NET Framework to .NET 6 and AngularJS 
+                  Migrated production applications from .NET Framework to .NET 6 and AngularJS
                   to Angular 15 with TypeScript.
                 </li>
                 <li>
                   Developed and maintained mobile apps using Expo and React Native.
                 </li>
                 <li>
-                  Utilized Entity Framework ORM to access, map, and manipulate SQL Server 
+                  Utilized Entity Framework ORM to access, map, and manipulate SQL Server
                   data using LINQ.
                 </li>
                 <li>
@@ -284,17 +316,17 @@
               <div class="text-slate-600 dark:text-slate-400 text-sm mb-1">
                 Full-time program in simulated work environment working on
                 team projects that reflect real world business problems.
-                </div>
+              </div>
               <ul class="text-slate-600 text-slate-600 dark:text-slate-400 list-disc ml-5 text-sm">
-                <li>Collaborated remotely on projects using Slack and Zoom.</li>
-                <li>Managed source code version control with Git and GitHub.</li>
                 <li>
-                  Applied JavaScript, HTML, and CSS fundamentals to build a
-                  feature rich social media dashboard with CRUD functionality.
+                  Collaborated remotely on projects using Slack and Zoom.
                 </li>
                 <li>
-                  Leveraged native ES6 module bundling to build DRY, reusable
-                  components.
+                  Managed source code version control with Git and GitHub.
+                </li>
+                <li>
+                  Leveraged native ES6 Javascript module bundling to build DRY, reusable
+                  components through clean, readable code.
                 </li>
                 <li>
                   Planned applications through white boarding dependencies,
@@ -305,7 +337,6 @@
                   Built and interacted with databases using SQL Server and
                   ADO.NET.
                 </li>
-                <li>Developed a blog management platform in ASP.NET with MVC.</li>
               </ul>
             </div>
             <div class="pb-4">
@@ -334,7 +365,7 @@
                   Designed and maintained portfolio website using HTML and CSS.
                 </li>
                 <li>
-                  Maintain regular clients through marketing, on-time delivery,
+                  Maintained regular clients through marketing, on-time delivery,
                   clear communication, and persistent attention to detail and
                   client needs.
                 </li>
